src/test/ui/issue-52533.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-52533.rs:15:16
   |
LL |     foo(|a, b| b)
   |                ^

error: unsatisfied lifetime constraints
  --> $DIR/issue-52533.rs:15:16
   |
LL |     foo(|a, b| b)
   |          -  -  ^ free region requires that `'1` must outlive `'2`
   |          |  |
   |          |  lifetime `'1` appears in this argument
   |          lifetime `'2` appears in this argument

error: aborting due to previous error

